# ThGuard

./: .gitignore  CMakeLists.txt  build.ps1  main.cpp
Data/: CMakeLists.txt  dummy_dcc.cpp  dummy_dcc.h
thread_guard/: CMakeLists.txt  thread_guard.hpp
